--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<app-nav ></app-nav>
-<app-banner></app-banner>
-
-<app-contactus></app-contactus>
+<app-nav></app-nav>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
