--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,8 +9,7 @@
                     <nav class="navbar navbar-default">
                         <!-- Brand and toggle get grouped for better mobile display -->
                         <div class="navbar-header">
-                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".bs-example-navbar-collapse-1"
-                                aria-expanded="false">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".bs-example-navbar-collapse-1" aria-expanded="false">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
@@ -25,8 +24,10 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
                             <ul class="nav navbar-nav navbar-right">
-                                <li *ngFor="let menu of data.menu;let i = index" >
-                                    <a class="page-scroll" [href]="menu.path">{{menu.title}}</a>
+                                <li *ngFor="let menu of data.menu;let i = index">
+
+                                    <a *ngIf="!menu.inPage" class="page-scroll" [routerLink]="menu.path">{{menu.title}}</a>
+                                    <a *ngIf="menu.inPage" class="page-scroll" [href]="menu.path">{{menu.title}}</a>
                                 </li>
                             </ul>
                         </div>
