added testinominial and merged conflicts

--- a/src/styles.css
+++ b/src/styles.css
@@ -106,6 +106,8 @@ body {
 
 .evt-cont {
     background-color: #FFF;
-    ;
     padding: 15px 23px;
+}
+.owl-theme .owl-nav{
+    margin-top: 0px !important;
 }
