--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <app-banner></app-banner>
 <app-about></app-about>
 <app-event></app-event>
+<app-testimonial></app-testimonial>
 <app-contactus></app-contactus>
