--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1343,7 +1343,7 @@ div#preloader {
 ----------------------------------------*/
 
 .testimonials-area {
-  background: rgba(0, 0, 0, 0) url("../img/background/slider1.jpg") no-repeat fixed center top / cover;
+  background: rgba(0, 0, 0, 0) url("../img/people.jpg") no-repeat fixed center top / cover;
   height: auto;
   width: 100%;
 }
