--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -126,7 +126,7 @@ a {
 }
 
 a:hover {
-  color: #3EC1D5;
+  color: #F97D09;
   text-decoration: none;
 }
 
@@ -135,20 +135,22 @@ a:active, a:hover {
 }
 
 body {
-  background: #fff none repeat scroll 0 0;
+  margin-top: 70px;
+  background-color: #FFF !important;
+  background: #FFF !important;
+  font-family: 'Laila', serif;
   color: #444;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
+  font-size: 19px;
   text-align: left;
   overflow-x: hidden;
-  line-height: 22px;
+  line-height: 24px;
 }
 
 /* Back to top button */
 .back-to-top {
   position: fixed;
   display: none;
-  background: #3EC1D5;
+  background: #F97D09;
   color: #fff;
   padding: 6px 12px 9px 12px;
   font-size: 16px;
@@ -165,7 +167,7 @@ body {
 }
 
 .back-to-top:focus {
-  background: #3EC1D5;
+  background: #F97D09;
   color: #fff;
   outline: none;
 }
@@ -202,12 +204,12 @@ div#preloader {
 }
 
 ::-moz-selection {
-  background: #3EC1D5;
+  background: #F97D09;
   text-shadow: none;
 }
 
 ::selection {
-  background: #3EC1D5;
+  background: #F97D09;
   text-shadow: none;
 }
 
@@ -259,13 +261,14 @@ div#preloader {
 /*--------------------------------*/
 
 .header-area {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: auto;
-  background: rgba(0, 0, 0, 0.70);
   z-index: 9;
+  background: #ffffff;
+  box-shadow: 0px 0px 12px 2px #3b3b3b59;
 }
 
 .navbar-header a.navbar-brand {
@@ -281,9 +284,9 @@ div#preloader {
 
 .main-menu ul.navbar-nav li a {
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  color: #fff;
+  color: #000;
+  font-weight: bold;
   font-size: 15px;
-  font-weight: 500;
   padding: 24px 0px;
   text-transform: capitalize;
   letter-spacing: 1px;
@@ -300,21 +303,21 @@ div#preloader {
 
 .main-menu ul.navbar-nav li.active a:hover {
   background: none;
-  color: #fff;
+  color: #F97D09;
 }
 
 .main-menu ul.navbar-nav li.active a:focus {
-  color: #fff;
+  color: #F97D09;
 }
 
 .main-menu ul.navbar-nav li.active a {
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  color: #fff;
+  color: #F97D09;
   position: relative;
 }
 
 .main-menu ul.navbar-nav li a:hover {
-  color: #3EC1D5;
+  color: #F97D09;
 }
 
 .navbar {
@@ -340,7 +343,7 @@ div#preloader {
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
   background-color: transparent;
-  color: #fff;
+  color: #F97D09;
 }
 
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
@@ -406,7 +409,7 @@ div#preloader {
 }
 
 .sticky-logo h1 span {
-  color: #3ec1d5;
+  color: #F97D09;
 }
 .stick .main-menu ul.navbar-nav li.active a::after {
   border: 1px solid #fff;
@@ -482,7 +485,7 @@ div#preloader {
 }
 
 .single-well ul li i {
-  color: #3EC1D5;
+  color: #F97D09;
   padding-right: 10px;
   font-size: 12px;
 }
@@ -514,7 +517,7 @@ div#preloader {
 }
 
 .services-details:hover h4, .services-details:hover .services-icon {
-  color: #3EC1D5;
+  color: #F97D09;
 }
 
 .row.second-row {
@@ -614,7 +617,7 @@ div#preloader {
 }
 
 .faq-details h4.check-title a.active, .faq-details a.active span.acc-icons::before {
-  color: #3EC1D5;
+  color: #F97D09;
 }
 
 .faq-details a.active span.acc-icons::before {
@@ -680,7 +683,7 @@ div#preloader {
 
 .tab-menu ul li.active a, .tab-menu ul li.hover a, .tab-menu ul li.focus a {
   border-bottom: 1px solid #fff;
-  color: #3EC1D5 !important;
+  color: #F97D09 !important;
 }
 
 .tab-menu .nav-tabs {
@@ -775,7 +778,7 @@ div#preloader {
 }
 
 .suscribe-input button {
-  background: #3ec1d5 none repeat scroll 0 0;
+  background: #F97D09 none repeat scroll 0 0;
   border: medium none;
   border-radius: 0 20px 20px 0;
   color: #fff;
@@ -788,7 +791,7 @@ div#preloader {
 
 .suscribe-input button:hover {
   background: #fff none repeat scroll 0 0;
-  color: #3ec1d5;
+  color: #F97D09;
 }
 
 /*----------------------------------------
@@ -873,7 +876,7 @@ div#preloader {
 }
 
 .email-news .email_button>button:hover {
-  background: #3EC1D5;
+  background: #F97D09;
   border: 1px solid #fff;
   color: #fff;
 }
@@ -883,7 +886,7 @@ div#preloader {
 }
 
 .team-left-icon ul li a:hover {
-  color: #3EC1D5;
+  color: #F97D09;
   background: #fff;
   border: 2px solid #fff;
 }
@@ -960,8 +963,8 @@ div#preloader {
 
 .team-social-icon ul li a:hover {
   color: #fff;
-  border: 1px solid #3EC1D5;
-  background: #3EC1D5;
+  border: 1px solid #F97D09;
+  background: #F97D09;
 }
 
 .team-content {
@@ -1007,7 +1010,7 @@ div#preloader {
 }
 
 .work-left-text {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #F97D09 none repeat scroll 0 0;
 }
 
 .work-left-text {
@@ -1089,8 +1092,8 @@ div#preloader {
 }
 
 .project-menu li a.active, .project-menu li a:hover {
-  border-color: #3EC1D5;
-  background: #3EC1D5;
+  border-color: #F97D09;
+  background: #F97D09;
   color: #fff;
   text-decoration: none;
 }
@@ -1259,7 +1262,7 @@ div#preloader {
   position: absolute;
   right: 50px;
   top: 12px;
-  color: #3EC1D5;
+  color: #F97D09;
 }
 
 .pri_table_list button {
@@ -1296,7 +1299,7 @@ div#preloader {
 }
 
 .saleon {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #F97D09 none repeat scroll 0 0;
   color: #fff;
   font-size: 13px;
   font-weight: 700;
@@ -1325,8 +1328,8 @@ div#preloader {
 }
 
 .active>button {
-  background: #3EC1D5 none repeat scroll 0 0;
-  border: 1px solid #3EC1D5;
+  background: #F97D09 none repeat scroll 0 0;
+  border: 1px solid #F97D09;
   color: #fff;
   transition: 0.4s;
 }
@@ -1342,7 +1345,7 @@ div#preloader {
  12.Testimonial Area Css
 ----------------------------------------*/
 
-.testimonials-area {
+.testimonials-area,.profile {
   background: rgba(0, 0, 0, 0) url("../img/people.jpg") no-repeat fixed center top / cover;
   height: auto;
   width: 100%;
@@ -1434,7 +1437,7 @@ div#preloader {
 }
 
 .testimonial-carousel.owl-carousel.owl-theme .owl-controls .owl-dots div.owl-dot.active span {
-  background: #3EC1D5;
+  background: #F97D09;
 }
 
 .testi-text.text-center>h6 {
@@ -1450,7 +1453,7 @@ div#preloader {
 }
 
 .guest-rev>a {
-  color: #3EC1D5;
+  color: #F97D09;
   font-size: 14px;
 }
 
@@ -1563,7 +1566,7 @@ div#preloader {
 }
 
 .single-blog .ready-btn:hover {
-  border: 1px solid #3EC1D5;
+  border: 1px solid #F97D09;
   color: #fff;
 }
 
@@ -1572,7 +1575,7 @@ div#preloader {
 --------------------------------*/
 
 .suscribe-area {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #F97D09 none repeat scroll 0 0;
   padding: 30px 0;
 }
 
@@ -1594,7 +1597,7 @@ div#preloader {
 .sus-btn {
   background: #fff none repeat scroll 0 0;
   border: 2px solid #fff;
-  color: #3EC1D5;
+  color: #F97D09;
   display: inline-block;
   font-size: 16px;
   font-weight: 700;
@@ -1606,7 +1609,7 @@ div#preloader {
 }
 
 .sus-btn:hover {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #F97D09 none repeat scroll 0 0;
   border: 2px solid #fff;
   color: #fff;
 }
@@ -1666,13 +1669,13 @@ div#preloader {
 
 .contact-form button[type=submit]:hover {
   color: #fff;
-  border: 1px solid #3EC1D5;
-  background: #3EC1D5;
+  border: 1px solid #F97D09;
+  background: #F97D09;
 }
 
 .contact-form  #sendmessage {
-  color: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  color: #F97D09;
+  border: 1px solid #F97D09;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1762,7 +1765,7 @@ div#preloader {
 }
 
 .footer-logo h2 span {
-  color: #3ec1d5;
+  color: #F97D09;
 }
 
 .footer-icons ul li {
@@ -1793,7 +1796,7 @@ div#preloader {
 }
 
 .footer-contacts p span {
-  color: #3EC1D5;
+  color: #F97D09;
   font-weight: 700;
 }
 
@@ -1807,8 +1810,8 @@ div#preloader {
 }
 
 .popular-tag ul li a:hover, .footer-icons ul li a:hover {
-  background: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  background: #F97D09;
+  border: 1px solid #F97D09;
   color: #fff;
 }
 
@@ -1836,7 +1839,7 @@ div#preloader {
 
 .copyright-text a:hover {
   text-decoration: underline;
-  color: #3EC1D5;
+  color: #F97D09;
 }
 
 .copyright-text a {
@@ -1849,7 +1852,7 @@ div#preloader {
 }
 
 .copyright a, .credits a {
-  color: #3EC1D5;
+  color: #F97D09;
 }
 
 .credits {
@@ -1952,7 +1955,7 @@ div#preloader {
 }
 
 .search-option button:hover {
-  color: #3ec1d5;
+  color: #F97D09;
 }
 
 .left-blog h4 {
@@ -2012,8 +2015,8 @@ div#preloader {
 
 .ready-btn:hover {
   color: #fff;
-  background: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  background: #F97D09;
+  border: 1px solid #F97D09;
   text-decoration: none;
 }
 
@@ -2031,7 +2034,7 @@ div#preloader {
 }
 
 .pst-content p a:hover, .left-blog ul li a:hover {
-  color: #3EC1D5;
+  color: #F97D09;
 }
 
 .blog-page .single-blog {
@@ -2102,7 +2105,7 @@ div#preloader {
 }
 
 .entry-meta span a:hover {
-  color: #3EC1D5;
+  color: #F97D09;
 }
 
 .post-information .entry-meta {
@@ -2124,7 +2127,7 @@ div#preloader {
 
 .entry-content blockquote {
   background: #fff none repeat scroll 0 0;
-  border-left: 5px solid #3EC1D5;
+  border-left: 5px solid #F97D09;
   font-size: 17.5px;
   font-style: italic;
   margin: 0 0 20px 40px;
@@ -2132,8 +2135,8 @@ div#preloader {
 }
 
 .pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
-  background-color: #3EC1D5;
-  border-color: #3EC1D5;
+  background-color: #F97D09;
+  border-color: #F97D09;
   color: #fff;
   cursor: default;
   z-index: 3;
@@ -2173,8 +2176,8 @@ div#preloader {
 }
 
 .sharing-icon a:hover {
-  color: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  color: #F97D09;
+  border: 1px solid #F97D09;
 }
 
 .single-blog .author-avatar {
@@ -2303,7 +2306,7 @@ span.email-notes {
 
 .comment-respond input[type="submit"] {
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: 1px solid #3ec1d5;
+  border: 1px solid #F97D09;
   border-radius: 20px;
   box-shadow: none;
   color: #444;
@@ -2325,13 +2328,13 @@ span.email-notes {
 }
 
 .comments-content-wrap span a:hover {
-  color: #3EC1D5;
+  color: #F97D09;
 }
 
 .comment-respond input[type=submit]:hover {
-  border: 1px solid #3EC1D5;
+  border: 1px solid #F97D09;
   color: #fff;
-  background: #3EC1D5;
+  background: #F97D09;
 }
 
 .single-blog .blog-pagination {
