--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,11 +8,11 @@
 <div class="container-fluid profile-title-container">
     <div class="container ">
         <div class="row">
-            <div class="col-xs-3" style="z-index: 8">
-                <img [src]="data.profilePic" alt="" class="img-thumbnail img-border img-responsive img" style="margin-top: -125px">
+            <div class="col-md-3 col-sm-4 col-xs-6 col-xs-offset-3 col-sm-offset-0" style="z-index: 8">
+                <img [src]="data.profilePic" alt="" class="img-thumbnail img-border img-responsive img profile-img">
             </div>
-            <div class="col-xs-9 text-justify " style="    padding-top: 35px;">
-                <h1 class=" spl-font">{{data.name}}
+            <div class="col-md-9 col-sm-8 col-xs-12 text-justify ">
+                <h1 class="spl-font profile-title">{{data.name}}
                     <h4 class="spl-font ">{{data.post}}</h4>
                 </h1>
             </div>
@@ -21,8 +21,130 @@
 </div>
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12" style="height: 500px;"></div>
+
+
+<section class="page-section timeline-section testi-inner">
+    <div class="testi-overly"></div>
+
+    <div class="container">
+        <div class="timeline">
+            <div class="timeline__wrap">
+                <div class="timeline__items">
+
+                    <div class="timeline__item">
+                        <div class="timeline__content">
+                            <h2>2004</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                        </div>
+                    </div>
+                    <div class="timeline__item">
+                        <div class="timeline__content">
+                            <h2>2004</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                        </div>
+                    </div>
+                    <div class="timeline__item">
+                        <div class="timeline__content">
+                            <h2>2002</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                        </div>
+                    </div>
+                    <div class="timeline__item">
+                        <div class="timeline__content">
+                            <h2>2002</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+</section>
+
+
+
+<section class="profile-details">
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-xs-6 col-xs-offset-3 col-sm-offset-0 mb-30">
+                    <img [src]="data.profilePic" alt="" class="img-thumbnail img-border img-responsive img">
+                </div>
+                <div class="col-sm-8 col-xs-12">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-xs-6 col-xs-offset-3 visible-xs mb-30">
+                    <img [src]="data.profilePic" alt="" class="img-thumbnail img-border img-responsive img">
+                </div>
+                <div class="col-sm-8 col-xs-12">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                </div>
+                <div class="col-sm-4 hidden-xs">
+                    <img [src]="data.profilePic" alt="" class="img-thumbnail img-border img-responsive img">
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-xs-6 col-xs-offset-3  col-sm-offset-0 mb-30">
+                    <img [src]="data.profilePic" alt="" class="img-thumbnail img-border img-responsive img">
+                </div>
+                <div class="col-sm-8 col-xs-12">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-xs-6 col-xs-offset-3 visible-xs mb-30">
+                    <img [src]="data.profilePic" alt="" class="img-thumbnail img-border img-responsive img">
+                </div>
+                <div class="col-sm-8 col-xs-12">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus.</p>
+                </div>
+                <div class="col-sm-4 hidden-xs">
+                    <img [src]="data.profilePic" alt="" class="img-thumbnail img-border img-responsive img">
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+
+
+</section>
